<resources>
    <string name="app_name">Operation Boom</string>
    <string name="item">Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome">Welcome!</string>
    <string name="confirmpassword">Confirm Password</string>
</resources>